--- a/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
+++ b/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
@@ -12,21 +12,11 @@ description: Webiny Page Builder performance benchmark.
 
 :::
 
-## Benchmark overview
-
-In this test we are requesting the default homepage that comes with Webiny Page Builder. We're fetching the HTML of that page. The linked assets like CSS, JS and images are not loaded. The payload size we are retrieving is 25.9kb compressed (or 778kb uncompressed).
-
-### Load structure
-
-We are sending 1,000 users to the website with a ramp up period of 25s, meaning each second 40 new users are coming to the page. After the ramp up period, for the next 10 minutes we are keeping the load of 1000 users constantly requesting the page. There is no caching on the "client" side happening.
-
 ## Results
 
-### Summary
-
-- **Total requests generated:** 2,274,117
-- **Average response time:** 267 ms (0.27s)
-- **Throughput:** 3,613 req/sec
+| Total requests | Avg. response time (ms) | Throughput (req/sec) |
+| -------------- | ----------------------: | -------------------: |
+| 2,274,117      |                     267 |                3,613 |
 
 :::info **What this means?**
 
@@ -35,6 +25,14 @@ Requests per second is a number that helps you calculate how many users you can 
 As an example say your average visitors stays on your site 5 minutes, and visits around 10 pages. That's 2 pages a minute. With a throughput of 3,613req/sec, you can handle 216,780 pages a minute, or 108,390 visitors in a minute.
 
 :::
+
+## Benchmark overview
+
+In this test we are requesting the default homepage that comes with Webiny Page Builder. We're fetching the HTML of that page. The linked assets like CSS, JS and images are not loaded. The payload size we are retrieving is 25.9kb compressed (or 778kb uncompressed).
+
+### Load structure
+
+We are sending 1,000 users to the website with a ramp up period of 25s, meaning each second 40 new users are coming to the page. After the ramp up period, for the next 10 minutes we are keeping the load of 1000 users constantly requesting the page. There is no caching on the "client" side happening.
 
 ### Response times
 
