fix: reorganize files

--- a/docs/key-topics/project-organization/project-applications-and-packages.mdx
+++ b/docs/key-topics/project-organization/project-applications-and-packages.mdx
@@ -1,12 +1,12 @@
 ---
-id: project-organization
-title: Project organization
-sidebar_label: Project organization
+id: project-applications-and-packages
+title: Project Applications and Packages
+sidebar_label: Applications and Packages
 keywords: ["webiny", "project", "organization", "packages", "applications"]
 description: Learn about fundamental organizational units of every Webiny project.
 ---
 
-import Theme from "../mdxComponents/theme";
+import Theme from "../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
@@ -19,13 +19,18 @@ Everything starts with a **Webiny project**, which is what gets created for you 
 -->
 
 ## Packages and project applications
+
 Every Webiny project consists of two fundamental organizational units - **packages** and **project applications** (or just **applications**).
 
 Packages are just regular [NPM packages](https://docs.npmjs.com/about-packages-and-modules#about-packages), or in other words, folders with its own `package.json` declaration file and some code.
 On the other hand, project applications are higher-level organizational units formed from one or more packages that, as the name itself suggests, form applications. Applications consist of both application code and cloud infrastructure that is needed in order to run them.
 
 :::info
-Visit the [Project Applications](/docs/key-topics/project-applications) section to learn more about project applications.
+Visit the [Project Applications](/docs/key-topics/project-organization/project-applications) section to learn more about project applications.
+:::
+
+:::tip
+Every Webiny project is organized as a monorepo. Visit the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) topic to learn more.
 :::
 
 The following diagram shows the project organization in a simplified and clear manner:
@@ -33,7 +38,7 @@ The following diagram shows the project organization in a simplified and clear m
 <!-- vale off -->
 
 <img
-  src={require("./assets/project-organization/project-organization.png").default}
+  src={require("./project-applications-and-packages/project-organization.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Project Organization"
@@ -83,6 +88,7 @@ The name of the `packages` folder is arbitrary and at this point, not important.
 :::
 
 ### Important Characteristics
+
 Here are some of the most important characteristics of packages and applications.
 
 #### Package scope
@@ -104,7 +110,7 @@ The same can happen with project applications. For example, let's say you have a
 <!-- vale off -->
 
 <img
-  src={require("./assets/project-organization/dependent-packages-apps.png").default}
+  src={require("./project-applications-and-packages/dependent-packages-apps.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Dependent Packages and Applications"
@@ -117,4 +123,3 @@ The same can happen with project applications. For example, let's say you have a
 **Does Webiny enforce strict files and folders organization?**
 
 No. You can organize packages and project applications in any way you see fit. For example, the folder in which you store your shared packages can be named in any way you like. You can have as many of those as needed, and can be organized in different folders, again, as you see fit. The same goes for project applications.
-
