--- a/docs/key-topics/project-organization/project-applications.mdx
+++ b/docs/key-topics/project-organization/project-applications.mdx
@@ -6,7 +6,7 @@ keywords: ["project", "applications", "deployment"]
 description: Learn what are project applications and how they're structured.
 ---
 
-import Theme from "../mdxComponents/theme";
+import Theme from "../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
