fix: correct links

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -17,7 +17,7 @@ description: Learn how to deploy your Webiny project and its project application
 Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
 
 :::info
-To learn more about project organization, check out the [Project organisation](/docs/key-topics/project-organization) and [Project Applications](/docs/key-topics/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
+To learn more about project organization, check out the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) and [Project Applications](/docs/key-topics/project-organization/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
 :::
 
 ## Before we begin
