--- a/docs/key-topics/project-organization/project-applications.mdx
+++ b/docs/key-topics/project-organization/project-applications.mdx
@@ -23,7 +23,7 @@ Project applications are higher-level organizational units formed from one or mo
 2. Cloud infrastructure that hosts your code or which is being utilized by it, which is also described and deployed using code. For that matter, by default, Webiny relies on a solution called [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), which is a modern infrastructure as code solution.
 
 :::info
-Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Organisation](/docs/key-topics/project-organization) page.
+Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) page.
 :::
 
 <!-- vale off -->
@@ -83,4 +83,4 @@ Every Webiny project can have any number of applications. This depends on the pr
 
 **Can applications work together?**
 
-Yes, and in most cases, [they are working together](/docs/key-topics/project-organization#package-and-project-application-dependencies).
+Yes, and in most cases, [they are working together](/docs/key-topics/project-organization/project-applications-and-packages#package-and-project-application-dependencies).
