fix: improve sentence

--- a/docs/key-topics/project-organization/monorepo-organization.mdx
+++ b/docs/key-topics/project-organization/monorepo-organization.mdx
@@ -78,7 +78,7 @@ In every Webiny project, the list of all workspaces can be found in the `package
 In addition to the above shown list, you're also free to add more workspaces, if need be. You will be updating this list whenever you're about to add a new package to your project.
 
 :::info
-For convenience's sake, different scaffolding commands update the workspaces list automatically for you.
+For convenience's sake, different scaffolding commands, that create new packages, update the workspaces list automatically for you.
 :::
 
 :::info
