fix: replace "CI" with "CD"

--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -26,7 +26,7 @@ Note that the **CD** abbreviation can also stand for **continuous delivery**, wh
 > Continuous delivery is the ability to deliver software that can be deployed at any time through manual releases; this is in contrast to continuous deployment which uses automated deployments.
 
 :::info
-In the rest of this guide, when mentioning the **CI** abbreviation, we're explicitly referring to the **continuous deployment**.
+In the rest of this guide, when mentioning the **CD** abbreviation, we're explicitly referring to the **continuous deployment**.
 :::
 
 ## The Workflow
