fix: replace "than" with "then"

--- a/docs/key-topics/project-organization/monorepo-organization.mdx
+++ b/docs/key-topics/project-organization/monorepo-organization.mdx
@@ -21,7 +21,7 @@ Behind the scenes, it is the [yarn 2](https://yarnpkg.com/) package manager that
 ## Workspaces vs. Packages
 Terms **workspace** and **package**, essentially, refer to the same thing - an NPM package or in other words, a folder with a `package.json` file and some code. Depending on the context, we use one of the two.
 
-When talking about the monorepo organization and yarn 2 and its workspaces feature, than the term **workspace** makes more sense to use. On the other hand, when talking about project applications and the actual code, the term **package** is used. We always say "import this package", never "import this workspace".
+When talking about the monorepo organization and yarn 2 and its workspaces feature, then the term **workspace** makes more sense to use. On the other hand, when talking about project applications and the actual code, the term **package** is used. We always say "import this package", never "import this workspace".
 
 :::info
 For more information on packages and their role in a Webiny project, take a step back and check the [Applications and Packages](/docs/key-topics/project-organization/project-applications-and-packages) topic.
