fix: update metadata

--- a/docs/tutorials/webiny-cli/adding-custom-commands.mdx
+++ b/docs/tutorials/webiny-cli/adding-custom-commands.mdx
@@ -2,8 +2,8 @@
 id: adding-custom-commands
 title: Adding Custom Commands
 sidebar_label: Adding Custom Commands
-keywords: ["webiny", "workspaces", "packages", "cli", "yarn"]
-description: Learn how to work with different workspaces, using the Webiny CLI.
+keywords: ["webiny", "cli", "custom", "commands"]
+description: Learn how to add custom commands to the Webiny CLI.
 ---
 
 :::tip What you'll learn
