fix: reword description

--- a/docs/key-topics/tools-libraries.mdx
+++ b/docs/key-topics/tools-libraries.mdx
@@ -3,7 +3,7 @@ id: tools-libraries
 title: Tools and Libraries
 sidebar_label: Tools and Libraries
 keywords: ["webiny", "project", "used", "tools", "libraries"]
-description: Learn about what tools and libraries are included in every Webiny project.
+description: Learn about different tools and libraries that are included in every Webiny project.
 ---
 
 import Theme from "../mdxComponents/theme";
