--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -9,5 +9,63 @@ description: Learn what Webiny CLI is and how it can help you in your project de
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-This article is work in progress. Please be patient for just a little bit.
+:::tip What you'll learn
+- what is the Webiny CLI
+- what are the commonly used commands
+:::
 
+## Overview
+
+Webiny CLI (command line interface) is the central tool that you'll be using throughout the complete project development process, in your terminal of choice.
+
+Out of the box, it offers a couple of commands that will let you perform essential tasks like deployments, development and production code builds, different scaffolding, and so on.
+
+Additionally, the Webiny CLI is pluggable, meaning you can easily create your own custom commands, or even replace the existing ones. Please visit the [Adding Custom Commands](/docs/tutorials/webiny-cli/adding-custom-commands) guide for more information.
+
+:::info
+For a full list of commands, in your terminal of choice, make sure to run `yarn webiny --help`.
+:::
+
+## Common Commands
+
+### `yarn webiny app`
+
+Contains a set of commands for working with your [project applications](/docs/key-topics/project-organization/project-applications).
+
+#### `yarn webiny app deploy {folder} --env {env}`
+
+Builds all of the project applications (packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
+
+#### `yarn webiny app destroy {folder} --env {env}`
+
+Destroys cloud infrastructure previously deployed within specified project application, into a defined environment.
+
+### `yarn webiny deploy`
+
+A convenience command that builds and deploys the whole project, or in other words, build and deploys all of the project applications within it. Additionally, an environment can be specified, using the `--env` argument.
+
+:::info
+For more hands-on information on the above listed commands, please visit the [Deploy Your Project](/docs/key-topics/project-organization/project-applications) and [Destroy Cloud Infrastructure](/docs/how-to-guides/deployment/destroy-cloud-infrastructure) guides.
+:::
+
+### `yarn webiny info --env {env}`
+
+Returns useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
+
+### `yarn webiny ws run {cmd} --folder {f} --scope {s}`
+
+Runs provided command, for example the `watch` command, across multiple workspaces (packages) in your project. Workspaces are defined via either the `--folder` or `--scope` argument.
+
+:::info
+For more information, please visit the [Working With Workspaces](/docs/how-to-guides/webiny-cli/working-with-workspaces) guide.
+:::
+
+## FAQ
+
+#### Do I need to install Webiny CLI manually?
+
+No, Webiny CLI comes set up automatically with every new Webiny project. Note that it's not installed as a global tool, but on a per-project basis. So, in theory, you could have two projects with different versions of the CLI.
+
+#### Do I need to invoke the Webiny CLI with `yarn`?
+
+For the highest chance that everything will work as expected, we recommend you do so. But do note that if you're using some of the alternative terminals, like for example [Zsh](https://ohmyz.sh/), you might even get away without it.
